# gdiscord

./: README.md  meson.build
examples/: meson.build  test.vala
lib/: meson.build
lib/client/: client.vala
